Refactor: 移除过时的 Rust 和 Cargo 配方，添加 arceos-features 类
- 删除不再使用的 cargo-bin, rustc-bin 和相关的 bbclass 文件
- 引入 arceos-features.bbclass 以支持特性自动推导
- 更新 README.md 以反映 StarryOS Yocto 构建系统的最新信息
- 重新组织配置文件，确保与 Yocto 标准兼容

--- a/conf/distro/starryos.conf
+++ b/conf/distro/starryos.conf
@@ -1,19 +1,26 @@
-
-# StarryOS build policy for Yocto.
+# starryos.conf
+# StarryOS 发行版配置
 #
-# This distro is intentionally minimal: it exists mainly to centralize toolchain
-# and global policy decisions (e.g. pinned Rust nightly), while keeping recipes
-# focused on building individual components.
+# 设计原则：
+# - 集中管理工具链版本 (Rust nightly)
+# - 提供 ArceOS 构建系统默认配置
+# - 保持配方专注于构建单个组件
+#
+# 对应关系:
+#   StarryOS/Makefile 的 export 变量 -> arceos-defaults.inc
+#   Rust 工具链版本 -> starry-rust-toolchain.inc
 
 DISTRO_NAME = "starryos"
-DISTRO_VERSION = "starryos.0"
-require conf/distro/include/starry-rust-toolchain.inc
-require conf/distro/include/starry-sdk-toolchain.inc
+DISTRO_VERSION = "2.0"
 
-# Workaround for user namespace permission issues
-# Disable network isolation globally to avoid "Operation not permitted" errors
-BB_TASK_IONICE_LEVEL = ""
-INHERIT += "network-workaround"
+# ==================== Rust 工具链选择 ====================
+# 使用预编译的 nightly 工具链（rust-prebuilt-native）
+# 优点：快速、包含所有 unstable features、构建可重现
+PREFERRED_PROVIDER_rust-native = "rust-prebuilt-native"
+PREFERRED_PROVIDER_cargo-native = "rust-prebuilt-native"
+
+# ==================== 引入配置文件 ====================
+require conf/distro/include/arceos-defaults.inc
 
 # Bare-metal kernel - no package management needed
 # Set to ipk to satisfy image.bbclass parsing, but won't be used
@@ -33,19 +40,10 @@ PREFERRED_PROVIDER_virtual/${TARGET_PREFIX}compilerlibs = "gcc-cross-${TARGET_AR
 # but base.bbclass still includes it in BASE_DEFAULT_DEPS
 BASEDEPENDS:remove:class-target = "virtual/libc"
 
-# Rust 1.92.0 includes cargo in the rust package
-# Mask separate cargo recipe to avoid conflict
-BBMASK += "meta-starry/recipes-devtools/cargo/cargo_1.92.0.bb"
-BBMASK += "poky/meta/recipes-devtools/cargo/cargo_.*\.bb"
-
-# Use only meta-starry Rust 1.92.0, mask poky's old 1.59.0
-BBMASK += "poky/meta/recipes-devtools/rust/rust_1.59.0.bb"
-BBMASK += "poky/meta/recipes-devtools/rust/rust-llvm_1.59.0.bb"
-BBMASK += "poky/meta/recipes-devtools/rust/libstd-rs_1.59.0.bb"
-
-# Mask poky's rust-common.bbclass to use meta-starry's version
-# This is necessary because bbclass files don't follow layer priority
-BBMASK += "poky/meta/classes/rust-common.bbclass"
+# Use rust-prebuilt-native instead of building from source
+# Mask poky's Rust recipes to avoid conflicts
+BBMASK += "poky/meta/recipes-devtools/rust/"
+BBMASK += "poky/meta/recipes-devtools/cargo/"
 
 # Pin rust std version to 1.92.0 to silence preferred-version warnings
 PREFERRED_VERSION_libstd-rs = "1.92.0"
