--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -16,11 +16,10 @@ LAYERSERIES_COMPAT_starry = "kirkstone mickledore nanbield scarthgap"
 
 # Build Rust from source instead of using prebuilt binaries
 # This enables full control and customization but requires 8-12 hours build time
-PREFERRED_PROVIDER_cargo-native = "cargo"
-PREFERRED_VERSION_cargo = "1.92.0"
-PREFERRED_VERSION_cargo-native = "1.92.0"
 
-PREFERRED_PROVIDER_rustc-native = "rust"
+# rust-native provides both rustc and cargo in a single package
+PREFERRED_PROVIDER_cargo-native = "rust-native"
+PREFERRED_PROVIDER_rustc-native = "rust-native"
 PREFERRED_VERSION_rust = "1.92.0"
 PREFERRED_VERSION_rust-native = "1.92.0"
 
