--- a/conf/machine/aarch64-qemu-virt.conf
+++ b/conf/machine/aarch64-qemu-virt.conf
@@ -2,43 +2,50 @@
 #@NAME: aarch64-qemu-virt
 #@DESCRIPTION: ARMv8 QEMU virt machine for StarryOS/ArceOS
 
-# Inherit base ARM and QEMU configuration
+# 基础架构配置
 require conf/machine/include/arm/armv8a/tune-cortexa57.inc
 require conf/machine/include/qemu.inc
 
-# ==================== ArceOS/StarryOS Configuration ====================
-# Architecture and platform package
+# ArceOS 通用配置
+require conf/machine/include/arceos-machine-common.inc
+
+# ==================== ArceOS/StarryOS 必须变量 ====================
+# 对应 Makefile: ARCH, PLAT_NAME, MYPLAT, TARGET
+# 注意: 即使使用 defplat feature，也需要设置 PLAT_PACKAGE 用于配置文件解析
 ARCEOS_ARCH = "aarch64"
 ARCEOS_PLATFORM = "aarch64-qemu-virt"
 ARCEOS_PLAT_PACKAGE = "axplat-aarch64-qemu-virt"
-
-# Rust target triple (bare-metal, no OS)
 RUST_TARGET = "aarch64-unknown-none-softfloat"
 
-# StarryOS is a bare-metal kernel, no libc needed
-PREFERRED_PROVIDER_virtual/kernel = "starry"
+# ==================== 平台策略 ====================
+# ARCEOS_USE_MYPLAT: 控制使用 defplat 还是 myplat feature
+#   "0" (默认) - 使用 defplat (包含所有平台，体积大但灵活)
+#   "1"         - 使用 myplat (仅当前平台，体积小)
+ARCEOS_USE_MYPLAT ?= "0"
 
-# Override kernel image type for bare-metal
-KERNEL_IMAGETYPE = "bin"
-
-# Default ArceOS configuration (can be overridden in recipes)
+# ==================== 平台默认值 ====================
+# 对应 Makefile: SMP ?= 4
 ARCEOS_SMP ?= "4"
-ARCEOS_LOG ?= "warn"
 
-# Default Cargo features for QEMU platform
-# Enables: virtio-net, virtio-gpu, virtio-input, virtio-socket, PCI bus
-# axfeat/defplat: default platform configuration
-# axfeat/dwarf: DWARF debug info
-# axfeat/smp: SMP support (multi-core)
-CARGO_FEATURES ?= "axfeat/defplat axfeat/dwarf axfeat/smp qemu"
-
-# ==================== QEMU Configuration ====================
+# ==================== QEMU 配置 ====================
+# runqemu 标准变量
 QB_SYSTEM_NAME = "qemu-system-aarch64"
 QB_MACHINE = "-machine virt"
-QB_CPU = "-cpu cortex-a57"
-QB_SMP = "-smp 4"
-QB_MEM = "-m 2048"
-QB_OPT_APPEND = "-nographic"
-QB_KERNEL_CMDLINE_APPEND = "console=ttyAMA0"
+QB_CPU = "-cpu cortex-a72"
+QB_MEM = "-m ${ARCEOS_MEM}"
+QB_SMP = "-smp ${ARCEOS_SMP}"
+QB_DEFAULT_KERNEL = "starry.bin"
+# bare-metal 无需 root= 参数，不设置 QB_KERNEL_ROOT
+QB_SERIAL_OPT = "-nographic"
+
+# 可选设备（后续扩展）
+QB_OPT_APPEND = ""
+# 示例：添加网络
+# QB_OPT_APPEND += "-device virtio-net-pci,netdev=net0 -netdev user,id=net0"
+# 示例：添加块设备
+# QB_OPT_APPEND += "-device virtio-blk-pci,drive=disk0 -drive id=disk0,if=none,format=raw,file=disk.img"
 
 SERIAL_CONSOLES = "115200;ttyAMA0"
+
+# 内存大小默认值（与 arceos-defaults.inc 保持一致）
+ARCEOS_MEM ?= "1G"
