--- a/conf/machine/loongarch64-qemu-virt.conf
+++ b/conf/machine/loongarch64-qemu-virt.conf
@@ -2,46 +2,35 @@
 #@NAME: loongarch64-qemu-virt
 #@DESCRIPTION: LoongArch 64-bit QEMU virt machine for StarryOS/ArceOS
 
-# ==================== ArceOS/StarryOS Configuration ====================
-# Architecture and platform package
-ARCEOS_ARCH = "loongarch64"
-ARCEOS_PLAT_PACKAGE = "axplat-loongarch64-qemu-virt"
-
-# Rust target triple (bare-metal, no OS)
-RUST_TARGET = "loongarch64-unknown-none-softfloat"
-
-# StarryOS is a bare-metal kernel
-PREFERRED_PROVIDER_virtual/kernel = "starry"
-# TCMODE = "external-loongarch64-musl"  # 暂时注释，等有工具链再启用
-
-# ==================== LoongArch64 Architecture ====================
-# LoongArch tune definitions live under include/loongarch/
+# 基础架构配置
 require conf/machine/include/loongarch/tune-loongarch.inc
 require conf/machine/include/qemu.inc
 
-# The StarryOS LoongArch platform expects a virt-style board with a 16550 UART.
-KERNEL_IMAGETYPE = "bin"
+# ArceOS 通用配置
+require conf/machine/include/arceos-machine-common.inc
 
-SERIAL_CONSOLES ?= "115200;ttyS0"
-SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
+# ==================== ArceOS/StarryOS 必须变量 ====================
+# 对应 Makefile: ARCH, PLAT_NAME, MYPLAT, TARGET
+ARCEOS_ARCH = "loongarch64"
+ARCEOS_PLATFORM = "loongarch64-qemu-virt"
+ARCEOS_PLAT_PACKAGE = "axplat-loongarch64-qemu-virt"
+RUST_TARGET = "loongarch64-unknown-none-softfloat"
 
-# Minimal tune/pkgarch hints until a full tune lands
+# ==================== LoongArch64 架构配置 ====================
 TUNE_PKGARCH = "loongarch64"
 PACKAGE_EXTRA_ARCHS = "loongarch64"
 KERNEL_ARCH = "loongarch"
-valid_archs:prepend = "loongarch loongarch64 "
 
-# ==================== QEMU Configuration ====================
-# runqemu parameters
+# ==================== 平台默认值 ====================
+ARCEOS_SMP ?= "4"
+
+# ==================== QEMU 配置 ====================
 QB_SYSTEM_NAME = "qemu-system-loongarch64"
 QB_MACHINE = "-machine virt"
-QB_CPU ?= "-cpu la464"
-QB_SMP ?= "-smp 4"
-QB_MEM ?= "-m 2048"
+QB_CPU = "-cpu la464"
+QB_SMP = "-smp ${ARCEOS_SMP}"
+QB_MEM = "-m 2048"
 QB_NETWORK_DEVICE = "-device virtio-net-pci,netdev=net0,mac=@MAC@"
-QB_TAP_OPT = "-netdev tap,id=net0,ifname=@TAP@,script=no,downscript=no"
-QB_ROOTFS_OPT = "-drive id=disk0,file=@ROOTFS@,if=none,format=raw -device virtio-blk-pci,drive=disk0"
-QB_SERIAL_OPT = "-serial mon:stdio"
-QB_TCPSERIAL_OPT = "-serial tcp:127.0.0.1:@PORT@,server,nowait"
-QB_OPT_APPEND = "-device virtio-tablet-pci -device virtio-keyboard-pci"
 QB_KERNEL_CMDLINE_APPEND = "console=ttyS0"
+
+SERIAL_CONSOLES = "115200;ttyS0"
