--- a/conf/machine/riscv64-qemu-virt.conf
+++ b/conf/machine/riscv64-qemu-virt.conf
@@ -2,38 +2,35 @@
 #@NAME: riscv64-qemu-virt
 #@DESCRIPTION: RISC-V 64-bit QEMU virt machine for StarryOS/ArceOS
 
+# 基础架构配置
 require conf/machine/include/riscv/tune-riscv.inc
 require conf/machine/include/qemu.inc
 
-# ==================== ArceOS/StarryOS Configuration ====================
-# Architecture and platform package
-ARCEOS_ARCH = "riscv64"
-ARCEOS_PLAT_PACKAGE = "axplat-riscv64-qemu-virt"
+# ArceOS 通用配置
+require conf/machine/include/arceos-machine-common.inc
 
-# Rust target triple (bare-metal, no OS)
+# ==================== ArceOS/StarryOS 必须变量 ====================
+# 对应 Makefile: ARCH, PLAT_NAME, MYPLAT, TARGET
+ARCEOS_ARCH = "riscv64"
+ARCEOS_PLATFORM = "riscv64-qemu-virt"
+ARCEOS_PLAT_PACKAGE = "axplat-riscv64-qemu-virt"
 RUST_TARGET = "riscv64gc-unknown-none-elf"
 
-# StarryOS is a bare-metal kernel, no libc needed
-PREFERRED_PROVIDER_virtual/kernel = "starry"
-
-# ==================== RISC-V Configuration ====================
+# ==================== RISC-V 架构配置 ====================
 DEFAULTTUNE = "riscv64"
 TUNE_ARCH = "riscv64"
 TUNE_PKGARCH = "riscv64"
 
-# ==================== QEMU Configuration ====================
+# ==================== 平台默认值 ====================
+ARCEOS_SMP ?= "4"
+
+# ==================== QEMU 配置 ====================
 QB_SYSTEM_NAME = "qemu-system-riscv64"
 QB_MACHINE = "-machine virt"
 QB_CPU = "-cpu rv64"
 QB_MEM = "-m 2048"
-QB_SMP = "-smp 4"
+QB_SMP = "-smp ${ARCEOS_SMP}"
 QB_KERNEL_CMDLINE_APPEND = "console=ttyS0"
-QB_DEFAULT_FSTYPE = "ext4"
 QB_DTB = ""
-QB_OPT_APPEND = "-nographic"
-
-KERNEL_IMAGETYPE = "bin"
-KERNEL_DEVICETREE = ""
 
 SERIAL_CONSOLES = "115200;ttyS0"
-SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
