--- a/conf/machine/x86_64-qemu-q35.conf
+++ b/conf/machine/x86_64-qemu-q35.conf
@@ -2,32 +2,32 @@
 #@NAME: x86_64-qemu-q35
 #@DESCRIPTION: x86_64 QEMU Q35 machine for StarryOS/ArceOS
 
+# 基础架构配置
 require conf/machine/include/x86/x86-64-common.inc
 require conf/machine/include/qemu.inc
 
-# ==================== ArceOS/StarryOS Configuration ====================
-# Architecture and platform package
-ARCEOS_ARCH = "x86_64"
-ARCEOS_PLAT_PACKAGE = "axplat-x86-pc"
+# ArceOS 通用配置
+require conf/machine/include/arceos-machine-common.inc
 
-# Rust target triple (bare-metal, no OS)
+# ==================== ArceOS/StarryOS 必须变量 ====================
+# 对应 Makefile: ARCH, PLAT_NAME, MYPLAT, TARGET
+ARCEOS_ARCH = "x86_64"
+ARCEOS_PLATFORM = "x86_64-qemu-q35"
+ARCEOS_PLAT_PACKAGE = "axplat-x86-pc"
 RUST_TARGET = "x86_64-unknown-none"
 
-# StarryOS is a bare-metal kernel, no libc needed
-PREFERRED_PROVIDER_virtual/kernel = "starry"
+# ==================== 平台默认值 ====================
+ARCEOS_SMP ?= "4"
 
-
-# ==================== QEMU Configuration ====================
+# ==================== QEMU 配置 ====================
 QB_SYSTEM_NAME = "qemu-system-x86_64"
 QB_MACHINE = "-machine q35"
 QB_CPU = "-cpu qemu64"
 QB_MEM = "-m 2048"
-QB_SMP = "-smp 4"
+QB_SMP = "-smp ${ARCEOS_SMP}"
 QB_KERNEL_CMDLINE_APPEND = "console=ttyS0"
-QB_DEFAULT_FSTYPE = "ext4"
-QB_OPT_APPEND = "-nographic"
 
+# x86_64 使用 ELF 格式而非 bin
 KERNEL_IMAGETYPE = "elf"
 
 SERIAL_CONSOLES = "115200;ttyS0"
-SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
