优化 arceos.bbclass 和 rust-kernel.bbclass 中的代码格式，移除多余空行，确保代码整洁性。新增 packagegroup-starrytest.bb 配方，提供 StarryOS 测试组件包组，包含 shell 环境、Python 运行时和测试工具。

--- a/conf/distro/starryos.conf
+++ b/conf/distro/starryos.conf
@@ -13,6 +13,10 @@
 DISTRO_NAME = "starryos"
 DISTRO_VERSION = "2.0"
 
+# ==================== C 库配置 ====================
+# StarryOS 发行版使用 musl C 库
+TCLIBC = "musl"
+
 # ==================== 镜像配置 ====================
 # 设置默认 hostname
 # 注意：local.conf 中的设置会覆盖这里的默认值
@@ -27,23 +31,13 @@ PREFERRED_PROVIDER_cargo-native = "rust-prebuilt-native"
 # ==================== 引入配置文件 ====================
 require conf/distro/include/arceos-defaults.inc
 
-# Bare-metal kernel - no package management needed
-# Set to ipk to satisfy image.bbclass parsing, but won't be used
+# ==================== 包管理配置 ====================
 PACKAGE_CLASSES = "package_ipk"
 
-# Skip package installation for bare-metal builds
-INHIBIT_PACKAGE_INSTALL = "1"
-INHIBIT_PACKAGE_STRIP = "1"
-
-# Bare-metal doesn't need C++ runtime libraries or libc
-# gcc-runtime provides libstdc++, which requires dynamic linking
-ASSUME_PROVIDED += "libgcc-dev libgcc virtual/${TARGET_PREFIX}compilerlibs"
-PREFERRED_PROVIDER_virtual/${TARGET_PREFIX}compilerlibs = "gcc-cross-${TARGET_ARCH}"
-
-# Remove virtual/libc from BASEDEPENDS to prevent gcc-runtime dependency
-# tclibc-baremetal.inc already puts virtual/libc in ASSUME_PROVIDED
-# but base.bbclass still includes it in BASE_DEFAULT_DEPS
-BASEDEPENDS:remove:class-target = "virtual/libc"
+# musl 作为 C 库提供者
+PREFERRED_PROVIDER_virtual/libc = "musl"
+PREFERRED_PROVIDER_virtual/libintl = "musl"
+PREFERRED_PROVIDER_virtual/libiconv = "musl"
 
 # Use rust-prebuilt-native instead of building from source
 # Mask poky's Rust recipes to avoid conflicts
