support loongarch build

--- a/conf/distro/starryos.conf
+++ b/conf/distro/starryos.conf
@@ -19,6 +19,7 @@ TCLIBC = "musl"
 
 # ==================== 内核配置 ====================
 PREFERRED_PROVIDER_virtual/kernel = "starry"
+PREFERRED_VERSION_linux-libc-headers = "6.1"
 
 # ==================== 镜像配置 ====================
 # 设置默认 hostname
